@@ -1,6 +1,6 @@
 #
 #
-# $Id: daemontools.spec.in,v 1.47 2024-05-15 10:51:30+05:30 Cprogrammer Exp mbhangui $
+# $Id: daemontools.spec.in,v 1.48 2024-07-01 18:21:51+05:30 Cprogrammer Exp mbhangui $
 %undefine _missing_build_ids_terminate_build
 %global _unpackaged_files_terminate_build 1
 
@@ -356,8 +356,9 @@ if [ $? -ne 0 ] ; then
 	log_it "svscan not running"
 	exit 0
 else
-  touch %{servicedir}/.svscan.down
   log_it "Giving svscan exactly 5 seconds to exit nicely" >> /var/log/%{name}-setup.log
+  %{_prefix}/bin/svps -s
+  touch %{servicedir}/.svscan.down
   if test -f %{_sysconfdir}/init/svscan.conf
   then
     /sbin/initctl emit qmailstop > /dev/null 2>&1
@@ -506,6 +507,7 @@ if [ $argv1 -eq 2 ] ; then # upgrade
         fi
       fi
     fi
+  	%{_prefix}/bin/svps -r
   fi
   # refresh svscanlog services
   %{_prefix}/sbin/minisvc --servicedir=%{servicedir} --refreshsvc="/service/.svscan"
